# sample-uv-demo

./: Dockerfile  app.py  apprunner.yaml  main.py  pyproject.toml  requirements.txt
